--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,7 +2,10 @@
 
 // Define defaults for each variable.
 
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family: 'Roboto', sans-serif;
+$secondary-font-family: 'Lato', sans-serif !default;
+// $base-font-family: 'Lato', sans-serif;
+// $secondary-font-family: 'Roboto', sans-serif !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
