--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="book-note">
+<div class="category">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.tag | capitalize }}</h1>
   {% endif %}
