--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -24,13 +24,15 @@ $orange-color:     #f66a0a !default;
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    800px !default;
+$content-width:    1200px !default;
 
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
 
 $on-medium:        $on-palm !default;
 $on-large:         $on-laptop !default;
+
+$standard-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 
 // Use media queries like this:
 // @include media-query($on-palm) {
