--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -27,6 +27,7 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  background-color: rgb(245, 246, 247);
 }
 
 h1, h2, h3, h4, h5, h6 {
