--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -7,6 +7,8 @@
   min-height: $spacing-unit * 1.865;
   line-height: $base-line-height * $base-font-size * 2.25;
 
+  background-color: #fff;
+
   // Positioning context for the mobile navigation icon
   position: relative;
 }
@@ -124,6 +126,7 @@
 .site-footer {
   border-top: 1px solid $grey-color-light;
   padding: $spacing-unit 0;
+  background: #fff;
 }
 
 .footer-heading {
@@ -227,6 +230,94 @@
 /**
  * Posts
  */
+
+ .posts {
+   display: flex;
+   flex-wrap: wrap;
+
+  .post-sidebar {
+    flex: 0 0 300px;
+    padding-right: 25px;
+
+    .post-categories {
+      list-style: none;
+      margin: 0;
+
+      li {
+        display: flex;
+        justify-content: space-between;
+
+        &:hover {
+          .view-all {
+            opacity: 1;
+            transition: opacity 0.3s;
+          }
+        }
+
+        .view-all {
+          opacity: 0;
+        }
+      }
+    }
+  }
+
+  .posts-container {
+    flex: 1 0 500px;
+  }
+ }
+
+ .post-list {
+      background: #fff;
+      border-radius: 4px;
+      box-shadow: $standard-box-shadow;
+
+      li.header {
+        padding: 15px;
+        font-weight: 500;
+      }
+
+      li {
+        border-bottom: 1px solid rgb(217, 218, 221);
+        padding: 15px;
+        margin-bottom: 0;
+
+        p {
+          font-weight: 200;
+        }
+
+        a {
+          text-decoration: none;
+          color: #111;
+
+          &:hover {
+            text-decoration: none;
+            color: #111;
+          }
+        }
+
+        .post-info {
+          display: flex;
+          justify-content: space-between;
+
+          .post-exerpt-title {
+            flex: 1 0 500px;
+          }
+          .post-meta {
+          }
+        }
+      }
+
+      li.load-more {
+        padding: 15px;
+        text-align: center;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+
+
 .post-header {
   margin-bottom: $spacing-unit;
 }
@@ -244,6 +335,10 @@
 
 .post-content {
   margin-bottom: $spacing-unit;
+  background: #fff;
+  box-shadow: $standard-box-shadow;
+  padding: 15px;
+
 
   h2 {
     @include relative-font-size(1.75);
