--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -6,11 +6,17 @@
   border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
   line-height: $base-line-height * $base-font-size * 2.25;
+  // line-height: 56.5px;
 
   background-color: #fff;
 
   // Positioning context for the mobile navigation icon
   position: relative;
+
+  .wrapper {
+    line-height: 56.5px;
+  }
+
 }
 
 .site-title {
