--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,35 +1,24 @@
 <footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
-  <div class="wrapper">
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col one-half">
+  <div class="site-footer-wrapper">
+    <div class="footer-col one-half">
       <h2 class="footer-heading">{{ site.title | escape }}</h2>
-        <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
-            </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
-            <li class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col one-half">
-        <p>{{- site.description | escape -}}</p>
-      </div>
-
-      <div class="social-links">
-        {%- include social.html -%}
-      </div>
+      <ul class="contact-list">
+        <li class="p-name">
+          {%- if site.author -%}
+            {{ site.author | escape }}
+          {%- else -%}
+            {{ site.title | escape }}
+          {%- endif -%}
+          </li>
+          {%- if site.email -%}
+          <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          {%- endif -%}
+          <li class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></li>
+      </ul>
     </div>
-
+  
+    <div class="social-links">
+      {%- include social.html -%}
+    </div>
   </div>
-
 </footer>
