--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,11 +2,14 @@
 
 // Define defaults for each variable.
 
-$base-font-family: 'Roboto', sans-serif;
-$secondary-font-family: 'Lato', sans-serif !default;
+// $base-font-family: 'Roboto', sans-serif;
+// $secondary-font-family: 'Lato', sans-serif !default;
+$secondary-font-family: 'Raleway', sans-serif;
+$base-font-family: 'Montserrat', sans-serif !default;
+
 // $base-font-family: 'Lato', sans-serif;
 // $secondary-font-family: 'Roboto', sans-serif !default;
-$base-font-size:   12px !default;
+$base-font-size:   14px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
