--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -135,6 +135,15 @@
   background: #fff;
 }
 
+.site-footer-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  max-width: calc(1200px - (30px * 2));
+  padding-right: 30px;
+  padding-left: 30px;
+  margin: 0 auto;
+}
+
 .footer-heading {
   @include relative-font-size(1.125);
   margin-bottom: $spacing-unit / 2;
@@ -146,54 +155,21 @@
   margin-left: 0;
 }
 
-.footer-col-wrapper {
-  @include relative-font-size(0.9375);
-  color: $grey-color;
-  margin-left: -$spacing-unit / 2;
-  @extend %clearfix;
-}
+/**
+ * Home Layout
+ */
 
-.footer-col {
-  width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-  width:         calc(100% - (#{$spacing-unit} / 2));
-  margin-bottom: $spacing-unit / 2;
-  padding-left: $spacing-unit / 2;
-}
-
-.footer-col-1,
-.footer-col-2 {
-  width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-  width:         calc(50% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-  width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-  width:         calc(100% - (#{$spacing-unit} / 2));
-}
-
-@media screen and (min-width: $on-large) {
-  .footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
-  }
-
-  .footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
-  }
-
-  .footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
-  }
-}
-
-@media screen and (min-width: $on-medium) {
-  .footer-col {
-    float: left;
-  }
-}
-
+ .home {
+   :first-child {
+     text-align: center;
+     img {
+       border-radius: 50%;
+       max-width: 50%;
+       width: 400px;
+       margin: 0 auto;
+     }
+   }
+ }
 
 
 /**
@@ -242,7 +218,7 @@
    flex-wrap: wrap;
 
   .post-sidebar {
-    flex: 0 0 300px;
+    flex: 0 1 200px;
     padding-right: 25px;
 
     .post-categories {
@@ -268,7 +244,7 @@
   }
 
   .posts-container {
-    flex: 1 0 500px;
+    flex: 1 0 250px;
   }
  }
 
@@ -304,6 +280,12 @@
         .post-info {
           display: flex;
           justify-content: space-between;
+          flex-wrap: wrap;
+          margin-bottom: 15px;
+
+          h3 {
+            margin-bottom: 0px;
+          }
 
           .post-exerpt-title {
             flex: 1 0 500px;
