--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -60,5 +60,7 @@ $standard-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 @import
   "minima/base",
   "minima/layout",
-  "minima/syntax-highlighting"
+  "minima/syntax-highlighting",
+  "bootstrap/bootstrap-theme.css",
+  "bootstrap/bootstrap.css"
 ;
