--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -163,13 +163,18 @@
    :first-child {
      text-align: center;
      img {
+       border: 5px solid #fff;
        border-radius: 50%;
        max-width: 50%;
        width: 400px;
        margin: 0 auto;
      }
+
+     :nth-child(2) {
+      text-align: center;
    }
  }
+}
 
 
 /**
@@ -221,6 +226,11 @@
     flex: 0 1 200px;
     padding-right: 25px;
 
+    .post-sidebar-container {
+      position: sticky;
+      top: 10px;
+    }
+
     .post-categories {
       list-style: none;
       margin: 0;
@@ -228,8 +238,19 @@
       li {
         display: flex;
         justify-content: space-between;
+        padding: 5px 10px;
+        margin-bottom: 5px;
+
+        &.active {
+          background: white;
+          border-left: 4px solid hsl(139, 50%, 45%);
+          box-shadow: 0 1px 3px hsla(0, 0%, 0%, .2);
+        }
 
         &:hover {
+          background: hsl(210, 17%, 98%);
+
+
           .view-all {
             opacity: 1;
             transition: opacity 0.3s;
@@ -256,6 +277,8 @@
       li.header {
         padding: 15px;
         font-weight: 500;
+        background-color: hsl( 212, 12%, 42%);
+        color: #fff;
       }
 
       li {
@@ -360,7 +383,7 @@
   left: 50%;
   margin-top: -30px;
   padding: 30px 0;
-  background: hsl(210, 17%, 96%);;
+  background: hsl(207, 22%, 90%);
   margin-bottom: 30px;
   box-shadow: inset 0 0px 2px hsla(0, 0%, 0%, 0.1);
 
