--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -245,6 +245,6 @@ layout: default
     </section>
 </div>
 
-<div class="col-md-12">
-    <a href="Resume.pdf" class="btn btn-lg btn-block btn-success" style="margin-top: 3em;">Download Resume</a>
+<div class="col-md-12" style="margin-top: 30px;">
+    <a href="assets/Resume.pdf" class="btn btn-lg btn-block btn-success" style="color: #fff;">Download Resume</a>
 </div>
