--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,7 +2,7 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
+  border-top: 5px solid #389e81;
   border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
   line-height: $base-line-height * $base-font-size * 2.25;
@@ -86,6 +86,20 @@
     line-height: $base-line-height;
     display: block;
     padding: 5px 10px;
+
+    &.active {
+      font-weight: 900;
+      border-bottom: 4px solid #389e81;
+      padding: 16px 0;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+
+    // &:hover {
+    //   text-decoration: none;
+    // }
 
     // Gaps between nav items, but not on the last one
     &:not(:last-child) {
