--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -1501,17 +1501,17 @@ fieldset[disabled] .btn-primary.focus {
   background-color: #5cb85c;
   border-color: #4cae4c;
 }
-.btn-success:focus,
+/* .btn-success:focus,
 .btn-success.focus {
   color: #ffffff;
   background-color: #449d44;
   border-color: #255625;
-}
-.btn-success:hover {
+} */
+/* .btn-success:hover {
   color: #ffffff;
   background-color: #449d44;
   border-color: #398439;
-}
+} */
 .btn-success:active,
 .btn-success.active,
 .open > .dropdown-toggle.btn-success {
