--- a/assets/bootstrap/bootstrap-theme.css
+++ b/assets/bootstrap/bootstrap-theme.css
@@ -158,16 +158,16 @@ fieldset[disabled] .btn-primary.active {
   background-repeat: repeat-x;
   border-color: #3e8f3e;
 }
-/* .btn-success:hover,
+.btn-success:hover,
 .btn-success:focus {
   background-color: #419641;
   background-position: 0 -15px;
-} */
-/* .btn-success:active,
+}
+.btn-success:active,
 .btn-success.active {
   background-color: #419641;
   border-color: #3e8f3e;
-} */
+}
 .btn-success.disabled,
 .btn-success[disabled],
 fieldset[disabled] .btn-success,
