--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -7,123 +7,151 @@ layout: default
 <div class="resume">
     <section>
         <div class="row">
-          <div class="col-md-12 text-center">
-              <h2>Kevin Mulcrone</h2>
-          </div>
+            <div class="col-md-12 text-center">
+                <h2>Kevin Mulcrone</h2>
+            </div>
         </div>
         <div class="row">
-          <div class="col-md-12 text-center">
-            <h4 style="margin-bottom: 0px;">637 Bakewell Street Apt B</h4>
-            <h4>Covington, KY 41011</h4>
-          </div>
+            <div class="col-md-12 text-center">
+                <h4 style="margin-bottom: 0px;">Software Engineer based in Covington, KY</h4>
+                <!-- <h4>Covington, KY</h4> -->
+            </div>
         </div>
         <div class="row">
-          <div class="col-md-12 text-center">
-            <h4 style="margin-bottom: 0px;">(708) 805-9743 - 
-            KayBeSee@gmail.com - 
-            http://KevinMulcrone.com</h4>
-          </div>
+            <div class="col-md-12 text-center">
+                <h4 style="margin-bottom: 0px;">
+                    (708) 805-9743 -
+                    KayBeSee@gmail.com -
+                    http://KevinMulcrone.com</h4>
+            </div>
         </div>
     </section>
     <section>
         <div class="row">
-        <div class="col-md-2">
-            <h2 class="resume-header">Profile</h2>
-        </div>
-        <div class="col-md-10">
-            Self-motivated individual with experience in software engineering, marketing, and business. Strength areas:
-            <ul>
-                <li>Self-motivated and able to learn new skills</li>
-                <li>Excellent written and oral communication and analytical skills</li>
-                <li>A strong work ethic combined with time management and organization</li>
-            </ul>
-        </div>
+            <div class="col-md-2">
+                <h2 class="resume-header">Profile</h2>
+            </div>
+            <div class="col-md-10">
+                Self-motivated individual with experience in software engineering, marketing, and business. Strength
+                areas:
+                <ul>
+                    <li>Self-motivated and able to learn new skills</li>
+                    <li>Excellent written and oral communication and analytical skills</li>
+                    <li>A strong work ethic combined with time management and organization</li>
+                </ul>
+            </div>
         </div>
     </section>
     <section>
 
         <div class="row">
-          <div class="col-md-2">
-              <h2 class="resume-header">Work Experience</h2>
-          </div>
-          <div class="col-md-10">
-              <!-- Start Losant -->
-              <div class="row">
-                  <div class="col-md-8">
-                      <b>Losant</b> - Software Engineer<br />
-                      <ul>
-                          <li>Build new features in the frontend web application
-                          <li>Tools: React, Redux, Styled Components, ES6, and Webpack</li>
-                      </ul>
-                  </div>
-                  <div class="col-md-4 hidden-sm hidden-xs">
-                      Cincinnati, OH<br />
-                      June 2018 - Present
-                  </div>
-              </div>
-              <div class="hor-break"></div>
-              <!-- Start Terrapin -->
-              <div class="row">
-                  <div class="col-md-8">
-                      <b>Terrapin Ticketing</b> - Co-Founder // Frontend Engineer<br />
-                      <ul>
-                          <li>Design and build front-end single page application to communicate with RESTful API
-                          <li>Tools: React, Redux, Styled Components, ES6, and Webpack</li>
-                          <li>Communicate with customers and fans about how to improve user experience</li>
-                      </ul>
-                  </div>
-                  <div class="col-md-4 hidden-sm hidden-xs">
-                      Cincinnati, OH<br />
-                      September 2017 - April 2018
-                  </div>
-              </div>
-              <div class="hor-break"></div>
-              <!-- Start Wyzerr -->
-              <div class="row">
-                  <div class="col-md-8">
-                      <b>Wyzerr</b> - Software Engineer<br />
-                      <ul>
-                          <li>Building SaaS platform using React, Redux, and Node.js</li>
-                      </ul>
-                  </div>
-                  <div class="col-md-4 hidden-sm hidden-xs">
-                      Cincinnati, OH<br />
-                      December 2016 - August 2017
-                  </div>
-              </div>
-              <div class="hor-break"></div>
-              <!-- Start Red Edge -->
-              <div class="row">
-                  <div class="col-md-8">
-                      <b>Red Edge</b> - Web Developer<br />
-                      <ul>
-                          <li>Built Chrome Extension to add custom field functionality to NationBuilder CMS</li>
-                          <li>Work with a team of developers to deliver completed projects to clients by deadlines</li>
-                      </ul>
-                  </div>
-                  <div class="col-md-4 hidden-sm hidden-xs">
-                      Washington DC<br />
-                      May 2016 - August 2016
-                  </div>
-              </div>
-              <div class="hor-break"></div>
-              <!-- Start Modulus -->
-              <div class="row">
-                  <div class="col-md-8">
-                      <b>Modulus</b> - Software Engineer Intern<br />
-                      <ul>
-                          <li>Build dashboards via Modulus API to monitor host, server, project data.</li>
-                          <li>Collaborate with a team to build features to make hosting Node.js applications easier for end users.</li>
-                      </ul>
-                  </div>
-                  <div class="col-md-4 hidden-sm hidden-xs">
-                      Cincinnati, OH<br />
-                      April 2015 - January 2016
-                  </div>
-              </div>
-              <div class="hor-break"></div>
-              <!-- Start KayBeSee Web Design -->
-              <!-- <div class="row">
+            <div class="col-md-2">
+                <h2 class="resume-header">Work Experience</h2>
+            </div>
+            <div class="col-md-10">
+                <!-- Start Losant -->
+                <div class="row">
+                    <div class="col-md-8">
+                        <b>Losant</b> - Software Engineer<br />
+                        <div class="visible-sm visible-xs">
+                            June 2018 - Present, Cincinnati, OH<br />
+                        </div>
+                        <ul>
+                            <li>Added various features to frontend application using React, Redux, and styled-components
+                                with two other frontend engineers</li>
+                            <li>Wrote comprehensive application search features for Node.js backend</li>
+                            <li>Wrote t-digest Kairos plugin in Java for median aggregations on time series data</li>
+                            <li>Collaborated with other developers using git and Jira</li>
+                            <li>Wrote tests using Mocha, Jest, Enzyme, and React Testing Library</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 hidden-sm hidden-xs">
+                        Cincinnati, OH<br />
+                        June 2018 - Present
+                    </div>
+                </div>
+                <div class="hor-break"></div>
+                <!-- Start Terrapin -->
+                <div class="row">
+                    <div class="col-md-8">
+                        <b>Terrapin Ticketing</b> - Co-Founder / Software Engineer<br />
+                        <div class="visible-sm visible-xs">
+                            Sept. 2017 - Dec. 2018, Cincinnati, OH
+                        </div>
+                        <ul>
+                            <li>Designed and built frontend web app using React, Redux, styled-components</li>
+                            <li>Refactored frontend after initial MVP using principles from <a
+                                    href="https://refactoringui.com/" target="_blank">Refactoring UI</a></li>
+                            <li>Initial backend written in Solidity</li>
+                            <li>Handled all business development and operations for the project</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 hidden-sm hidden-xs">
+                        Cincinnati, OH<br />
+                        Sept. 2017 - Dec. 2018
+                    </div>
+                </div>
+                <div class="hor-break"></div>
+                <!-- Start Wyzerr -->
+                <div class="row">
+                    <div class="col-md-8">
+                        <b>Wyzerr</b> - Software Engineer<br />
+                        <div class="visible-sm visible-xs">
+                            Dec. 2016 - Aug. 2017, Cincinnati, OH
+                        </div>
+                        <ul>
+                            <li>Collaborated with an in-house development team to build a survey builder Sass platform
+                                targeted at market researchers</li>
+                            <li>Developed using React, Redux, MongoDB, Express, HTML/CSS/JS, and Go</li>
+
+                        </ul>
+                    </div>
+                    <div class="col-md-4 hidden-sm hidden-xs">
+                        Cincinnati, OH<br />
+                        Dec. 2016 - Aug. 2017
+                    </div>
+                </div>
+                <div class="hor-break"></div>
+                <!-- Start Red Edge -->
+                <div class="row">
+                    <div class="col-md-8">
+                        <b>Red Edge</b> - Web Developer<br />
+                        <div class="visible-sm visible-xs">
+                            May 2016 - Aug. 2016, Washington DC<br />
+                        </div>
+                        <ul>
+                            <li>Built Chrome Extension to add custom field functionality to NationBuilder CMS</li>
+                            <li>Work with a team of developers to deliver completed projects to clients by deadlines
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 hidden-sm hidden-xs">
+                        Washington DC<br />
+                        May 2016 - Aug. 2016
+                    </div>
+                </div>
+                <div class="hor-break"></div>
+                <!-- Start Modulus -->
+                <div class="row">
+                    <div class="col-md-8">
+                        <b>Modulus</b> - Software Engineer Intern<br />
+                        <div class="visible-sm visible-xs">
+                            April 2015 - Jan. 2016, Cincinnati, OH
+                        </div>
+                        <ul>
+                            <li>Build dashboards via Modulus API to monitor host, server, project data.</li>
+                            <li>Collaborate with a team to build features to make hosting Node.js applications easier
+                                for end users.</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 hidden-sm hidden-xs">
+                        Cincinnati, OH<br />
+                        April 2015 - Jan. 2016
+                    </div>
+                </div>
+                <div class="hor-break"></div>
+                <!-- Start KayBeSee Web Design -->
+                <!-- <div class="row">
                   <div class="col-md-8">
                       <b>KayBeSee Web Design</b> - Founder<br />
                       <ul>
@@ -137,8 +165,8 @@ layout: default
                   </div>
               </div>
               <div class="hor-break"></div> -->
-              <!-- Start Xavier Help Desk -->
-              <!-- <div class="row">
+                <!-- Start Xavier Help Desk -->
+                <!-- <div class="row">
                   <div class="col-md-8">
                       <b>Xavier University Help Desk</b> – Team II Team Member<br />
                       <ul>
@@ -197,7 +225,7 @@ layout: default
                   </div>
               </div> -->
             </div>
-          </div>
+        </div>
     </section>
     <section>
 
@@ -209,11 +237,11 @@ layout: default
                 <div class="row">
                     <div class="col-md-8">
                         <b>Honors Bachelor of Arts, Philosophy, Politics, & The Public (PPP)<br />
-                        Bachelor of Arts, Computer Science <br /></b>
+                            Bachelor of Arts, Computer Science <br /></b>
                         Xavier University<br />
                     </div>
                     <div class="col-md-4 hidden-sm hidden-xs">
-                        August 2013 - December 2016<br/>
+                        August 2013 - Dec. 2016<br />
                         Cincinnati, OH
                     </div>
                 </div>
@@ -237,9 +265,16 @@ layout: default
                 <h2 class="resume-header">Interests</h2>
             </div>
             <div class="col-md-10">
-                <p><b>Economics</b> – Regular attendant of Foundation for Economic Education (FEE) summer seminars. Interested in the Austrian School of economic thought and cryptocurrencies like Bitcoin.</p>
-                <p><b>Activism</b> – I organized and led Xavier University's Young Americans for Liberty my junior and senior year of college. Founded Lyons Township High School’s Young Americans for Liberty (YAL) chapter in 2012. Have written <a href="http://www.headcount.org/author/kevin-mulcrone/" target="_blank">articles</a> for HeadCount. Founded and maintain <a href="http://www.Panic2016.com" target="_blank">Panic 2016</a>.</p>
-                <p><b>Startups</b> – I’m interested in new ways to solve problems. Currently working on building a frictionless decentralized ticket marketplace that enables users to buy, sell, and trade concert tickets online securely with virtually no fees.</p>
+                <p><b>Economics</b> – Interested in the Austrian School of economics and cryptocurrencies like Bitcoin.
+                    Attended
+                    conferences put on by the Foundation for Economic Education (FEE), Students for Liberty, and MIT
+                    Bitcoin
+                    Expo.</p>
+                <p><b>Furniture Making</b> – I’m an amateur woodworker / furniture maker. I’ve taken classes at <a
+                        href="https://lostartpress.com/" target="_blank">Lost Art
+                        Press</a> and built several chairsand stools.</p>
+                <p><b>Live Music</b> – I am a big supporter of live music. I have volunteered and worked at several
+                    music festivals, built an application to facilitate fans trading tickets.</p>
             </div>
         </div>
     </section>
