moved to denver

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -8,12 +8,12 @@ layout: default
     <section>
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2>Kevin Mulcrone</h2>
+                <h2 style="margin-bottom: 4px;">Kevin Mulcrone</h2>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-                <h4 style="margin-bottom: 0px;">Software Engineer based in Covington, KY</h4>
+                <h4 style="margin-bottom: 0px;">Software Engineer based in Denver, CO</h4>
                 <!-- <h4>Covington, KY</h4> -->
             </div>
         </div>
@@ -49,12 +49,29 @@ layout: default
                 <h2 class="resume-header">Work Experience</h2>
             </div>
             <div class="col-md-10">
+                <!-- Start RADAR -->
+                <div class="row">
+                    <div class="col-md-8">
+                        <b>RADAR</b> - Software Engineer<br />
+                        <div class="visible-sm visible-xs">
+                            Sept 2019 - Present, Denver, CO<br />
+                        </div>
+                        <ul>
+                            <li>Coming Soon...</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 hidden-sm hidden-xs">
+                        Denver, CO<br />
+                        Sept 2019 - Present
+                    </div>
+                </div>
+                <div class="hor-break"></div>
                 <!-- Start Losant -->
                 <div class="row">
                     <div class="col-md-8">
                         <b>Losant</b> - Software Engineer<br />
                         <div class="visible-sm visible-xs">
-                            June 2018 - Present, Cincinnati, OH<br />
+                            June 2018 - Aug. 2019, Cincinnati, OH<br />
                         </div>
                         <ul>
                             <li>Added various features to frontend application using React, Redux, and styled-components
@@ -67,7 +84,7 @@ layout: default
                     </div>
                     <div class="col-md-4 hidden-sm hidden-xs">
                         Cincinnati, OH<br />
-                        June 2018 - Present
+                        June 2018 - Aug. 2019
                     </div>
                 </div>
                 <div class="hor-break"></div>
@@ -238,7 +255,7 @@ layout: default
                     <div class="col-md-8">
                         <b>Honors Bachelor of Arts, Philosophy, Politics, & The Public (PPP)<br />
                             Bachelor of Arts, Computer Science <br /></b>
-                        Xavier University<br />
+                        Xavier University
                     </div>
                     <div class="col-md-4 hidden-sm hidden-xs">
                         August 2013 - Dec. 2016<br />
