condense work experience section

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -120,30 +120,10 @@ layout: default
           </div>
         </div>
         <div class="hor-break"></div>
-        <!-- Start Wyzerr -->
-        <div class="row">
-          <div class="col-md-8">
-            <b>Wyzerr</b> - Software Engineer<br />
-            <div class="visible-sm visible-xs">
-              Dec. 2016 - Aug. 2017, Cincinnati, OH
-            </div>
-            <ul>
-              <li>Collaborated with an in-house development team to build a survey builder Sass platform
-                targeted at market researchers</li>
-              <li>Developed using React, Redux, MongoDB, Express, HTML/CSS/JS, and Go</li>
-
-            </ul>
-          </div>
-          <div class="col-md-4 hidden-sm hidden-xs">
-            Cincinnati, OH<br />
-            Dec. 2016 - Aug. 2017
-          </div>
-        </div>
-        <div class="hor-break"></div>
         <!-- Start Red Edge -->
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-md-8">
-            <b>Red Edge</b> - Web Developer<br />
+            <b>Red Edge</b> - Web Developer Intern<br />
             <div class="visible-sm visible-xs">
               May 2016 - Aug. 2016, Washington DC<br />
             </div>
@@ -158,9 +138,9 @@ layout: default
             May 2016 - Aug. 2016
           </div>
         </div>
-        <div class="hor-break"></div>
+        <div class="hor-break"></div> -->
         <!-- Start Modulus -->
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-md-8">
             <b>Modulus</b> - Software Engineer Intern<br />
             <div class="visible-sm visible-xs">
@@ -177,7 +157,7 @@ layout: default
             April 2015 - Jan. 2016
           </div>
         </div>
-        <div class="hor-break"></div>
+        <div class="hor-break"></div> -->
         <!-- Start KayBeSee Web Design -->
         <!-- <div class="row">
                   <div class="col-md-8">
@@ -269,7 +249,7 @@ layout: default
             Xavier University
           </div>
           <div class="col-md-4 hidden-sm hidden-xs">
-            August 2013 - Dec. 2016<br />
+            August 2013 - May 2017<br />
             Cincinnati, OH
           </div>
         </div>
