--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -49,6 +49,23 @@ layout: default
         <h2 class="resume-header">Work Experience</h2>
       </div>
       <div class="col-md-10">
+         <!-- Start RADAR -->
+         <div class="row">
+          <div class="col-md-8">
+            <b>Albert.io</b> - Software Engineer<br />
+            <div class="visible-sm visible-xs">
+              Nov 2020 - Present, Remote<br />
+            </div>
+            <ul>
+              <li><i>Will update in the future...</i></li>
+            </ul>
+          </div>
+          <div class="col-md-4 hidden-sm hidden-xs">
+            Remote<br />
+            Nov 2020 - Present
+          </div>
+        </div>
+        <div class="hor-break"></div>
         <!-- Start RADAR -->
         <div class="row">
           <div class="col-md-8">
